Fixed SoundCloud covers having incorrect height on small windows/mobile

--- a/docs/global.sass
+++ b/docs/global.sass
@@ -163,7 +163,7 @@ section
         .thumbnails
             a.item
                 display: block
-                height: 200px
+                height: auto
 .canvas-container
     position: absolute
     top: 0px
